# ogmen_robotics

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ogmen_description/lib/ogmen_description/: filter  mover  talker
install/ogmen_description/share/ogmen_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ogmen_description/share/ogmen_description/cmake/: ogmen_descriptionConfig-version.cmake  ogmen_descriptionConfig.cmake
install/ogmen_description/share/ogmen_description/config/: display.rviz
install/ogmen_description/share/ogmen_description/environment/: ament_prefix_path.dsv  path.dsv
install/sllidar_ros2/lib/sllidar_ros2/: sllidar_client  sllidar_node
install/sllidar_ros2/share/sllidar_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build  latest_list
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/ogmen_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ogmen_description/launch/: display.launch.py  gazebo.launch.py  gz-sim.launch.py  rviz.launch.py  spawn.launch.py
src/ogmen_description/meshes/: base_link.stl  camera_1.stl  left_wheel_1.stl  lidar_1.stl  right_wheel_1.stl
src/ogmen_description/ogmen_description/: reading_laser.py
src/ogmen_description/urdf/: materials.xacro  ogmen.gazebo  ogmen.trans  ogmen.xacro
src/ogmen_description/worlds/: ogmen_world.world
(+79 files in other folders)
